<resources>
    <string name="app_name">DO SOPT</string>

    <string name="back_btn_pressed">버튼을 한번 더 누르면 종료됩니다.</string>

    <string name="server_error">서버 통신에 실패했습니다.</string>

    <string name="login_id_error">아이디가 잘못되었습니다.</string>
    <string name="login_pw_error">비밀번호가 잘못되었습니다.</string>
    <string name="login_empty_error">회원가입을 진행해주세요.</string>
    <string name="login_success">로그인에 성공했습니다.</string>
    <string name="login_failure">아이디와 비밀번호를 다시 확인해주세요</string>
    <string name="login_success_from_server"> %d 유저로 로그인에 성공했습니다.</string>

    <string name="login_tv_title">Welcome to SOPT</string>
    <string name="login_tv_id_title">ID</string>
    <string name="login_et_id_hint">아이디를 입력해주세요.</string>
    <string name="login_tv_pw_title">PW</string>
    <string name="login_et_pw_hint">비밀번호를 입력해주세요.</string>
    <string name="login_tv_auto_login">자동 로그인</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_sign_up">회원가입</string>

    <string name="sign_in_id_error">아이디의 길이를 확인해주세요.</string>
    <string name="sign_in_pw_error">비밀번호의 길이를 확인해주세요.</string>
    <string name="sign_in_empty_error">모든 값을 입력해주세요.</string>
    <string name="sign_in_success">회원가입에 성공했습니다.</string>
    <string name="sign_in_failure">이미 존재하는 아이디입니다.</string>

    <string name="sign_up_tv_title">회원가입</string>
    <string name="sign_up_tv_id_title">ID</string>
    <string name="sign_up_et_id_hint">영문, 숫자 조합 (6~10자)</string>
    <string name="sign_up_tv_pw_title">PW</string>
    <string name="sign_up_et_pw_hint">영문, 숫자, 특수문자 조합 (6~12자)</string>
    <string name="sign_up_tv_nk_title">닉네임</string>
    <string name="sign_up_et_nk_hint">닉네임을 입력해주세요.</string>
    <string name="sign_up_tv_drink_title">선호 주종</string>
    <string name="sign_up_et_drink_hint">선호 주종을 입력해주세요.</string>
    <string name="sign_up_btn_sign_up">회원가입</string>

    <string name="profile_tv_id_title">ID</string>
    <string name="profile_tv_drink_title">선호 주종</string>
    <string name="profile_tv_amount_title">주량</string>
    <string name="profile_btn_amount">내 진짜 주량 찾기</string>
    <string name="profile_btn_delete">그만 마실래잉</string>

    <string name="view_type_error_msg">Unknown View Type : %d</string>
    <string name="adapter_not_initialized_error_msg">Adapter is not initialized</string>

    <string name="fix_tv_title">상태 메세지를 수정해보세요 !</string>
    <string name="fix_et_hint">바꿀 상태 메세지를 입력해주세요~</string>
    <string name="fix_btn_submit">입력 완료</string>

    <string name="birth_item_tv_gift">선물하기</string>
    
    <string name="profile_tv_title">술친구 리스트</string>
    <string name="profile_btn_change">소개 변경</string>
    <string name="profile_tv_amount_bottle">병</string>

    <string name="profile_dialog_tv_title">그래서 진짜 주량이 뭔데?</string>
    <string name="profile_dialog_tv_btn">믿어줘!</string>
    <string name="profile_dialog_tv_exit">닫기</string>

    <string name="menu_android">DO ANDRO:D</string>
    <string name="menu_home">HOME</string>
    <string name="menu_follower">FOLLOWER</string>
    <string name="menu_profile">PROFILE</string>

    <string name="follower_tv_title">바다 건너 술 친구들</string>
    <string name="sign_up_tv_star">*</string>
    <string name="sign_up_id_error">아이디 형식이 올바르지 않습니다.</string>
    <string name="sign_up_pw_error">비밀번호 형식이 올바르지 않습니다.</string>

</resources>    