<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_fix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_gray_fill_top10_rect"
        android:paddingBottom="20dp">

        <View
            android:id="@+id/iv_fix_handler"
            android:layout_width="80dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_gray_fill_8_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_fix_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/fix_tv_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_fix_handler" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fix"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:boxBackgroundColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fix_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fix"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:hint="@string/fix_et_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_fix_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/shape_gray_fill_8_rect"
            android:text="@string/fix_btn_submit"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_fix" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>