<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="org.sopt.dosopttemplate.data.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile_thumbnail"
            android:layout_width="60dp"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_profile_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_soju" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_profile_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{user.nickname}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cv_profile_thumbnail"
            app:layout_constraintStart_toEndOf="@id/cv_profile_thumbnail"
            app:layout_constraintTop_toTopOf="@id/cv_profile_thumbnail"
            tools:text="생호" />

        <TextView
            android:id="@+id/tv_profile_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{user.description}"
            app:layout_constraintBottom_toBottomOf="@id/cv_profile_thumbnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_profile_nickname"
            app:layout_constraintTop_toTopOf="@id/cv_profile_thumbnail"
            tools:text="전통주 스터디장입니다 반갑습니다~" />

        <TextView
            android:id="@+id/tv_profile_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/profile_tv_id_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_profile_thumbnail" />

        <TextView
            android:id="@+id/tv_profile_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@{user.id}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_id_title"
            tools:text="sangho.kk" />

        <TextView
            android:id="@+id/tv_profile_drink_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/profile_tv_drink_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_id" />

        <TextView
            android:id="@+id/tv_profile_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@{user.drink}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_drink_title"
            tools:text="소주" />

        <TextView
            android:id="@+id/tv_profile_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/profile_tv_amount_title"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_drink" />

        <TextView
            android:id="@+id/tv_amount_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@{user.drinkAmount}"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_amount_title"
            tools:text="반병" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_btn_amount"
            app:layout_constraintTop_toTopOf="@id/tv_amount_drink"
            app:layout_constraintBottom_toBottomOf="@id/tv_amount_drink"
            app:layout_constraintStart_toEndOf="@id/tv_amount_drink"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            android:background="@drawable/shape_pink_line_12_rect"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/material_dynamic_neutral50"
            android:paddingHorizontal="12dp"
            android:text="@string/profile_btn_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>